Changes for 4.2.0rc1

New features:
.......PS. [ZBXNEXT-5081] added item preprocessing support to proxies (wiper)
...G...... [ZBXNEXT-4967] added Zabbix sender data sending to multiple destinations given in ServerActive configuration parameter (viktors)
A.F....... [ZBX-15286] dropped support use of discovered items as master (Sasha)

Bug fixes:
..F....... [ZBX-15207] fixed deprecated css features (ashubin)
.......PS. [ZBX-15798] fixed proxy configuration update failure on Oracle; fixed failure on empty SQL buffer on Oracle (kalimulin)
A.F....... [ZBX-15219] fixed unwanted removing scenario post fields on scenario update (gcalenko, vasilijs)
..F....... [ZBX-11278] reworked property state indicator in mass update screens (miks)
........S. [ZBX-15716] fixed escalation cancel message is called if escalation interrupts with unfinished step or recovery (akozlovs)
..F....... [ZBX-15468] fixed LDAP configuration form not being able to save changes when user password field is empty string (gcalenko)
..F....... [ZBX-15669] fixed page scroll after widget being added to dashboard (gcalenko)
..F....... [ZBX-15548] fixed resolving of {ITEM.VALUE} macro in the trigger description (Sasha)
........S. [ZBX-15774] fixed memory leak in housekeeper when elasticsearch is used (vso)
........S. [ZBX-15788] fixed crash when substituting LLD macros in calculated item formula expression (vso)
..F....... [ZBX-15608] fixed when Widget Graph show disabled trigger/problem (vasilijs)
..F....... [ZBX-10397] fixed when global messaging severities unchecked if profile saved earlier (ashubin, vasilijs)
..F.I...S. [ZBX-15693] fixed widget default height in schema.tmpl (asestakovs)
A.F....... [ZBX-15596] fixed when widget in frontend can be created larger than API validation supports (ashubin, vasilijs)
..F....... [ZBX-15308] fixed timeselector in screens when page is opened with link containing sid argument (ashubin, gcalenko)