@@ -26,7 +26,8 @@ class CSvg extends CSvgTag {
 
 		$this
 			->setAttribute('id', str_replace('.', '', uniqid('svg_', true)))
-			->setAttribute('version', '1.1');
+			->setAttribute('version', '1.1')
+			->setAttribute('xmlns', 'http://www.w3.org/2000/svg');
 	}
 
 	protected function startToString() {
